server/compilers/goLiteJS/src/test/ml2/valid/ml2rune.go
package main

func main() {
    var a rune = '\n';

    
}
func foo() bool {
    if true {
        return true
    }else if false {
        return false
    }else{
        return true
    }
    for {
        //return true
    }
    var a bool  
    switch a    {
        case true:
            return true;
        case false:
            return false;
        default:
           // return true;
    }
    {
        //return true
    }
    for true {
        //return true;
    }
    for ;true; {
       // return true;
    }
    if a {
        return true
    }
    switch a {
        default:
            
    }
}
