server/compilers/goLiteJS/src/test/ml2/invalid/invreturn6.go
package main
//Error: Missing return statement in block

func main(b asdas) bool{
    var a bool = true;
    {

    }
    return true;
}
